--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<h2>Hari Sachdeva</h2>
 							<p>I'm a Software Engineer</p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Activate</a></li>
+								<!-- <li><a href="#" class="button primary">Activate</a></li> -->
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -65,15 +65,16 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/yelpit.jpg" alt="" /></div><div class="content">
+								<h2>Yelpit<br /></h2>
+								<p>Single-page web application designed to locate the best restauarants nearby. Application built with Ruby on Rails, React, Redux, JavaScript, and PostgreSQL. Integrates Google Maps API and AWS S3.
+									Inspired by Yelp.
+								</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
+								<h2>MarioJump<br />
 								elementum magna</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
