Add in second project with gif

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>MarioJump<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/MarioJump.gif" alt="" /></div><div class="content">
+								<h2>Mario Jump<br /></h2>
+								<p> </p>
+								<p>An addictive game inspired by Doodle Jump</p>
 							</div>
 						</section>
 						<section class="spotlight">
