Add in Live and Repo Links to project

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/yelpit.jpg" alt="" /></div><div class="content">
 								<h2>Yelpit<br /></h2>
+								<p><a href="https://yelp-it.herokuapp.com/#/" target="_blank">Live</a>&emsp;
+									<a href="https://github.com/hsachdeva01/Yelpit" target="_blank">Repo</a>
+								</p>
 								<p>Single-page web application designed to locate the best restauarants nearby. Application built with Ruby on Rails, React, Redux, JavaScript, and PostgreSQL. Integrates Google Maps API and AWS S3.
 									Inspired by Yelp.
 								</p>
@@ -75,8 +78,11 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/MarioJump.gif" alt="" /></div><div class="content">
 								<h2>Mario Jump<br /></h2>
-								<p> </p>
-								<p>An addictive game inspired by Doodle Jump</p>
+								<p>
+										<p><a href="https://hsachdeva01.github.io/MarioJump/" target="_blank">Live</a>&emsp;
+									<a href="https://github.com/hsachdeva01/MarioJump" target="_blank">Repo</a> 
+								</p>
+								<p>An addictive game inspired by Doodle Jump.</p>
 							</div>
 						</section>
 						<section class="spotlight">
