Update headshot, about me section, and third project

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Hari Sachdeva</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -48,16 +48,22 @@
 				<!-- One -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
-							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-							</header>
+							<div>
 							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
+								<li><span class="label"><img class="headshot" src="images/headshot.jpeg" alt=""></span></li>
+							</div>
+							<div>
+							<header class="major">
+								<h2>About me</h2>
+								<p>My name is Hari Sachdeva. I am a Software Engineer based in San Francisco, CA with strong experience
+									in developing web applications that utilizes JavaScript, React, Redux, Ruby on Rails, HTML5, CSS3, 
+									PostgreSQL, API, and AWS S3. 
+								</p>
+							</header>
+							</div>
+								<!-- <li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
 								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li> -->
 							</ul>
 						</div>
 					</section>
@@ -79,17 +85,23 @@
 							<div class="image"><img src="images/MarioJump.gif" alt="" /></div><div class="content">
 								<h2>Mario Jump<br /></h2>
 								<p>
-										<p><a href="https://hsachdeva01.github.io/MarioJump/" target="_blank">Live</a>&emsp;
+									<a href="https://hsachdeva01.github.io/MarioJump/" target="_blank">Live</a>&emsp;
 									<a href="https://github.com/hsachdeva01/MarioJump" target="_blank">Repo</a> 
 								</p>
 								<p>An addictive game inspired by Doodle Jump.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/Trippt.jpg" alt="" /></div><div class="content">
+								<h2>Trippt</h2>
+								<p>
+									<a href="https://trippt.herokuapp.com/#/" target="_blank">Live</a>&emsp;
+									<a href="https://github.com/Rasheeq-Ahmed/Trippt" target="_blank">Repo</a> 
+								</p>
+								<p>
+									A single page application that allows users to add trips, select destinations, choose activities of interest and
+									add/update their itinerary.
+								</p>
 							</div>
 						</section>
 					</section>
@@ -98,9 +110,9 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Skills</h2>
+								<!-- <p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p> -->
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane">
