Add in get in touch section

--- a/index.html
+++ b/index.html
@@ -146,9 +146,12 @@
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
-							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+							<header class="contact">
+								<!-- <h2>Arcue ut vel commodo</h2> -->
+								<h2>GET IN TOUCH!</h2>
+								<!-- <p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p> -->
+								<i class="fa fa-reply"></i>
+								<p>hsahdevaucd@gmail.com</p>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="#" class="button fit primary">Activate</a></li>
