--- a/index.html
+++ b/index.html
@@ -154,8 +154,9 @@
 								<p>hsahdevaucd@gmail.com</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="https://drive.google.com/file/d/1qaCifHFUPBLdTSdqpNDmOaqKnCEt43ff/view?usp=sharing" target="_blank" class="button fit primary">Resume</a></li>
+								<!-- <li><a href="#" class="button fit primary">Activate</a></li>
+								<li><a href="#" class="button fit">Learn More</a></li> -->
 							</ul>
 						</div>
 					</section>
