add in email feature

--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p> -->
 							</header>
 							<ul class="features">
+								<li class="fab fa-js-square">
+									<h3>JavaScript</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
 								<li class="icon fa-paper-plane">
 									<h3>Arcu accumsan</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
@@ -151,12 +155,10 @@
 								<h2>GET IN TOUCH!</h2>
 								<!-- <p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p> -->
 								<i class="fa fa-reply"></i>
-								<p>hsahdevaucd@gmail.com</p>
+								<a href="mailto:hsachdevaucd@gmail.com"><p class="email">hsahdevaucd@gmail.com</p></a>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="https://drive.google.com/file/d/1qaCifHFUPBLdTSdqpNDmOaqKnCEt43ff/view?usp=sharing" target="_blank" class="button fit primary">Resume</a></li>
-								<!-- <li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li> -->
 							</ul>
 						</div>
 					</section>
@@ -168,9 +170,9 @@
 							<li><a href="https://www.linkedin.com/in/hari-sachdeva/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://angel.co/u/hsachdeva" class="icon brands fa-angellist" target="_blank"><span class="label">AngelList</span></a></li>
 						</ul>
-						<ul class="copyright">
+						<!-- <ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
+						</ul> -->
 					</footer>
 
 			</div>
