--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="#banner">Home</a></li>
+											<li><a href="#one">About Me</a></li>
+											<li><a href="#two">Projects</a></li>
+											<li><a href="#three">Skills</a></li>
+											<li><a href="#cta">Resume</a></li>
 										</ul>
 									</div>
 								</li>
