--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
 	</head>
 	<body class="landing is-preload">
 
@@ -37,7 +38,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Hari Sachdeva</h2>
-							<p>I'm a Software Engineer</p>
+							<p>Software Engineer</p>
 							<ul class="actions special">
 								<!-- <li><a href="#" class="button primary">Activate</a></li> -->
 							</ul>
@@ -55,9 +56,9 @@
 							<div>
 							<header class="major">
 								<h2>About me</h2>
-								<p>My name is Hari Sachdeva. I am a Software Engineer based in San Francisco, CA with strong experience
-									in developing web applications that utilizes JavaScript, React, Redux, Ruby on Rails, HTML5, CSS3, 
-									PostgreSQL, API, and AWS S3. 
+								<p>My name is Hari Sachdeva. I am a Software Engineer based in San Francisco, CA <br>
+									with strong experience in developing web applications that utilizes JavaScript,<br>
+									React, Redux, Ruby on Rails, HTML5, CSS3, PostgreSQL, API, and AWS S3. 
 								</p>
 							</header>
 							</div>
@@ -73,8 +74,8 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/yelpit.jpg" alt="" /></div><div class="content">
 								<h2>Yelpit<br /></h2>
-								<p><a href="https://yelp-it.herokuapp.com/#/" target="_blank">Live</a>&emsp;
-									<a href="https://github.com/hsachdeva01/Yelpit" target="_blank">Repo</a>
+								<p><a href="https://yelp-it.herokuapp.com/#/" target="_blank">LIVE</a>&emsp;
+									<a href="https://github.com/hsachdeva01/Yelpit" target="_blank">REPO</a>
 								</p>
 								<p>Single-page web application designed to locate the best restauarants nearby. Application built with Ruby on Rails, React, Redux, JavaScript, and PostgreSQL. Integrates Google Maps API and AWS S3.
 									Inspired by Yelp.
@@ -85,8 +86,8 @@
 							<div class="image"><img src="images/MarioJump.gif" alt="" /></div><div class="content">
 								<h2>Mario Jump<br /></h2>
 								<p>
-									<a href="https://hsachdeva01.github.io/MarioJump/" target="_blank">Live</a>&emsp;
-									<a href="https://github.com/hsachdeva01/MarioJump" target="_blank">Repo</a> 
+									<a href="https://hsachdeva01.github.io/MarioJump/" target="_blank">LIVE</a>&emsp;
+									<a href="https://github.com/hsachdeva01/MarioJump" target="_blank">REPO</a> 
 								</p>
 								<p>An addictive game inspired by Doodle Jump.</p>
 							</div>
@@ -95,8 +96,8 @@
 							<div class="image"><img src="images/Trippt.jpg" alt="" /></div><div class="content">
 								<h2>Trippt</h2>
 								<p>
-									<a href="https://trippt.herokuapp.com/#/" target="_blank">Live</a>&emsp;
-									<a href="https://github.com/Rasheeq-Ahmed/Trippt" target="_blank">Repo</a> 
+									<a href="https://trippt.herokuapp.com/#/" target="_blank">LIVE</a>&emsp;
+									<a href="https://github.com/Rasheeq-Ahmed/Trippt" target="_blank">REPO</a> 
 								</p>
 								<p>
 									A single page application that allows users to add trips, select destinations, choose activities of interest and
@@ -115,33 +116,40 @@
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p> -->
 							</header>
 							<ul class="features">
-								<li class="fab fa-js-square">
-									<h3>JavaScript</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="devicon-javascript-plain colored">
+										<h3>JavaScript</h3> 
 								</li>
-								<li class="icon fa-paper-plane">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="devicon-react-original colored">
+										<h3>React</h3>
 								</li>
-								<li class="icon solid fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li>
+									<h3>
+										Redux
+									</h3>
 								</li>
-								<li class="icon solid fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="devicon-ruby-plain colored">
+										<h3>Ruby</h3>
 								</li>
-								<li class="icon solid fa-headphones-alt">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="devicon-rails-plain-wordmark colored">
+										<h3>Rails</h3>
 								</li>
-								<li class="icon fa-heart">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="devicon-html5-plain-wordmark">
+										<h3>HTML5</h3>
 								</li>
-								<li class="icon fa-flag">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="devicon-css3-plain-wordmark">
+										<h3>CSS3</h3>
+								</li>
+								<li class="devicon-amazonwebservices-plain-wordmark colored">
+										<h3>AWS3</h3>
+								</li>
+								<li class="devicon-nodejs-plain">
+										<h3>Node.js</h3>
+								</li>
+								<li class="devicon-mongodb-plain-wordmark">
+										<h3>MongoDB</h3>
+								</li>
+								<li class="devicon-express-original-wordmark">
+										<h3>Express</h3>
 								</li>
 							</ul>
 						</div>
@@ -162,7 +170,6 @@
 							</ul>
 						</div>
 					</section>
-
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
