--- a/index.html
+++ b/index.html
@@ -117,39 +117,55 @@
 							</header>
 							<ul class="features">
 								<li class="devicon-javascript-plain colored">
-										<h3>JavaScript</h3> 
+										<!-- <h3>JavaScript</h3>  -->
 								</li>
 								<li class="devicon-react-original colored">
-										<h3>React</h3>
+										<!-- <h3>React</h3> -->
 								</li>
 								<li>
-									<h3>
-										Redux
-									</h3>
+									<!-- <h3>Redux</h3> -->
 								</li>
 								<li class="devicon-ruby-plain colored">
-										<h3>Ruby</h3>
+										<!-- <h3>Ruby</h3> -->
 								</li>
 								<li class="devicon-rails-plain-wordmark colored">
-										<h3>Rails</h3>
+										<!-- <h3>Rails</h3> -->
 								</li>
 								<li class="devicon-html5-plain-wordmark">
-										<h3>HTML5</h3>
+										<!-- <h3>HTML5</h3> -->
 								</li>
 								<li class="devicon-css3-plain-wordmark">
-										<h3>CSS3</h3>
+										<!-- <h3>CSS3</h3> -->
 								</li>
 								<li class="devicon-amazonwebservices-plain-wordmark colored">
-										<h3>AWS3</h3>
+										<!-- <h3>AWS3</h3> -->
 								</li>
 								<li class="devicon-nodejs-plain">
-										<h3>Node.js</h3>
+										<!-- <h3>Node.js</h3> -->
 								</li>
 								<li class="devicon-mongodb-plain-wordmark">
-										<h3>MongoDB</h3>
+										<!-- <h3>MongoDB</h3> -->
 								</li>
 								<li class="devicon-express-original-wordmark">
-										<h3>Express</h3>
+										<!-- <h3>Express</h3> -->
+								</li>
+								<li class="devicon-postgresql-plain-wordmark colored">
+										<!-- <h3>PostgreSQL</h3> -->
+								</li>
+								<li class="devicon-jquery-plain-wordmark colored">
+										<!-- <h3>jQuery</h3> -->
+								</li>
+								<li class="devicon-git-plain-wordmark colored">
+										<!-- <h3>Git</h3> -->
+								</li>
+								<li class="devicon-github-plain colored">
+										<!-- <h3>Github</h3> -->
+								</li>
+								<li class="devicon-heroku-plain-wordmark colored">
+										<!-- <h3>Heroku</h3> -->
+								</li>
+								<li class="devicon-atom-original-wordmark colored">
+										<!-- <h3>Atom</h3> -->
 								</li>
 							</ul>
 						</div>
