Update styling and content for Skills section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								<!-- <li><a href="#" class="button primary">Activate</a></li> -->
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">GET TO KNOW ME</a>
 					</section>
 
 				<!-- One -->
@@ -111,7 +111,7 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Skills</h2>
+								<h2 class="skills">Skills</h2>
 								<!-- <p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p> -->
 							</header>
@@ -119,13 +119,11 @@
 								<li class="devicon-javascript-plain colored">
 										<!-- <h3>JavaScript</h3>  -->
 								</li>
-								<li class="devicon-react-original colored">
+								<li class="devicon-react-original-wordmark colored">
 										<!-- <h3>React</h3> -->
 								</li>
-								<li>
-									<!-- <h3>Redux</h3> -->
-								</li>
-								<li class="devicon-ruby-plain colored">
+						
+								<li class="devicon-ruby-plain-wordmark colored">
 										<!-- <h3>Ruby</h3> -->
 								</li>
 								<li class="devicon-rails-plain-wordmark colored">
