Add in education

--- a/index.html
+++ b/index.html
@@ -169,6 +169,46 @@
 						</div>
 					</section>
 
+					<section id="one" class="wrapper style1 special">
+						<div class="inner">
+							<ul>
+								<header class="major">
+									<h2>Education</h2>
+									<li class="education">
+										<div class="inner-education">
+										<img class="class-logo" src="images/UCDavisLogo.jpg" alt="">
+										<i>
+											University of California, Davis
+										</i>
+										</div>
+										<p>
+											In depth-exposure to economics and quantitative methods, problem solving strategies, critical <br>
+											thinking and effective communication skills
+										</p>
+									</li>
+									<h3></h3>
+									<li class="education">
+										<div class="inner-education">
+											<img class="class-logo" src="images/aALogo.png" alt="">
+										<i>
+											App Academy
+										</i>
+										</div>
+										<p>
+											1000+ hours full stack software engineering bootcamp with < 3% acceptance rate
+										</p>
+									</div>
+								</header>
+							</ul>
+							<!-- <li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
+													<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
+													<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li> -->
+							<!-- </ul> -->
+						</div>
+					</section>
+
+					
+
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
