Update Education section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 											<li><a href="#one">About Me</a></li>
 											<li><a href="#two">Projects</a></li>
 											<li><a href="#three">Skills</a></li>
+											<li><a href="#education">Education</a></li>
 											<li><a href="#cta">Resume</a></li>
 										</ul>
 									</div>
@@ -169,7 +170,7 @@
 						</div>
 					</section>
 
-					<section id="one" class="wrapper style1 special">
+					<section id="education" class="wrapper style1 special">
 						<div class="inner">
 							<ul>
 								<header class="major">
@@ -198,12 +199,9 @@
 											1000+ hours full stack software engineering bootcamp with < 3% acceptance rate
 										</p>
 									</div>
+								</li>
 								</header>
 							</ul>
-							<!-- <li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-													<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-													<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li> -->
-							<!-- </ul> -->
 						</div>
 					</section>
 
