update contact wording

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 						<div class="inner">
 							<header class="contact">
 								<!-- <h2>Arcue ut vel commodo</h2> -->
-								<h2>GET IN TOUCH!</h2>
+								<h2>Let's Connect!</h2>
 								<!-- <p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p> -->
 								<i class="fa fa-reply"></i>
 								<a href="mailto:hsachdevaucd@gmail.com"><p class="email">hsahdevaucd@gmail.com</p></a>
