Update app academy logo

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 									<h3></h3>
 									<li class="education">
 										<div class="inner-education">
-											<img class="class-logo" src="images/aALogo.png" alt="">
+											<img class="class-logo-aa" src="images/aALogo.png" alt="">
 										<i>
 											App Academy 
 										</i>
