Add education year

--- a/index.html
+++ b/index.html
@@ -179,7 +179,10 @@
 										<div class="inner-education">
 										<img class="class-logo" src="images/UCDavisLogo.jpg" alt="">
 										<i>
-											University of California, Davis
+											B.S. Managerial Economics 
+											<p>
+												2014 - 2017
+											</p>
 										</i>
 										</div>
 										<p>
@@ -192,8 +195,11 @@
 										<div class="inner-education">
 											<img class="class-logo-aa" src="images/aALogo.png" alt="">
 										<i>
-											App Academy 
+											Web Development 
 										</i>
+										<p>
+											2020
+										</p>
 										</div>
 										<p>
 											1000+ hours full stack software engineering bootcamp with < 3% acceptance rate
