Update Dev icons on skills section

--- a/index.html
+++ b/index.html
@@ -130,19 +130,19 @@
 								<li class="devicon-rails-plain-wordmark colored">
 										<!-- <h3>Rails</h3> -->
 								</li>
-								<li class="devicon-html5-plain-wordmark">
+								<li class="devicon-html5-plain-wordmark colored">
 										<!-- <h3>HTML5</h3> -->
 								</li>
-								<li class="devicon-css3-plain-wordmark">
+								<li class="devicon-css3-plain-wordmark colored">
 										<!-- <h3>CSS3</h3> -->
 								</li>
 								<li class="devicon-amazonwebservices-plain-wordmark colored">
 										<!-- <h3>AWS3</h3> -->
 								</li>
-								<li class="devicon-nodejs-plain">
+								<li class="devicon-nodejs-plain colored">
 										<!-- <h3>Node.js</h3> -->
 								</li>
-								<li class="devicon-mongodb-plain-wordmark">
+								<li class="devicon-mongodb-plain-wordmark colored">
 										<!-- <h3>MongoDB</h3> -->
 								</li>
 								<li class="devicon-express-original-wordmark">
