Update project description, mern and JS

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 									<a href="https://hsachdeva01.github.io/MarioJump/" target="_blank">LIVE</a>&emsp;
 									<a href="https://github.com/hsachdeva01/MarioJump" target="_blank">REPO</a> 
 								</p>
-								<p>An addictive game inspired by Doodle Jump.</p>
+								<p>An addictive game inspired by Doodle Jump with a Mario theme.</p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -102,7 +102,7 @@
 								</p>
 								<p>
 									A single page application that allows users to add trips, select destinations, choose activities of interest and
-									add/update their itinerary.
+									add/update their itinerary. Trippt was built using the MERN stack (MongoDB, Express, React, Node.js).
 								</p>
 							</div>
 						</section>
