Update Project description

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 									<a href="https://hsachdeva01.github.io/MarioJump/" target="_blank">LIVE</a>&emsp;
 									<a href="https://github.com/hsachdeva01/MarioJump" target="_blank">REPO</a> 
 								</p>
-								<p>An addictive game inspired by Doodle Jump with a Mario theme.</p>
+								<p>An addictive game inspired by Doodle Jump with a Mario theme. <br>
+								A game built with JavaScript, HTML5 Canvas and CSS3. </p>
 							</div>
 						</section>
 						<section class="spotlight">
