Add react iconm

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
+			<link rel="stylesheet"
+				href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css" />
 	</head>
 	<body class="landing is-preload">
 
@@ -124,6 +126,9 @@
 								</li>
 								<li class="devicon-rails-plain-wordmark colored">
 										<!-- <h3>Rails</h3> -->
+								</li>
+								<li   class="iconify"
+                data-icon="ion:logo-react">
 								</li>
 								<li class="devicon-html5-plain-wordmark colored">
 										<!-- <h3>HTML5</h3> -->
